objects/LAT_MX_SegmentacionRatios__c.object
<CustomObject>
    <fields>
        <fullName>BacardiFrom__c</fullName>
        <label>BacardiFrom</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BacardiTo__c</fullName>
        <label>BacardiTo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BacardiValue__c</fullName>
        <label>BacardiValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booleanos__c</fullName>
        <label>BoolNoSelec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BrandSelec__c</fullName>
        <label>BrandSelec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CalidadBateoValue__c</fullName>
        <label>CalidadBateoValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CalidadBateo__c</fullName>
        <label>CalidadBateo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SuperPremium</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calificacion__c</fullName>
        <label>Calificacion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mainstream</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Iconic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChampFrom__c</fullName>
        <label>ChampFrom</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChampTo__c</fullName>
        <label>ChampTo</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Champ_Value__c</fullName>
        <label>ChampValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CubaFrom__c</fullName>
        <label>CubaFrom</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CubaTo__c</fullName>
        <label>CubaTo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CubaValue__c</fullName>
        <label>CubaValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DjInter__c</fullName>
        <label>DjInter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HasRecognizedChef__c</fullName>
        <label>HasRecognizedChef</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NotaFrom__c</fullName>
        <label>NotaFrom</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NotaTo__c</fullName>
        <label>NotaTo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promo__c</fullName>
        <label>PromoPaqu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResAcceso__c</fullName>
        <label>ResAcceso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Somelier__c</fullName>
        <label>Somelier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Values__c</fullName>
        <label>Values</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HEB</fullName>
                </value>
                <value>
                    <fullName>LEB</fullName>
                </value>
                <value>
                    <fullName>NIGHT CLUB</fullName>
                </value>
                <value>
                    <fullName>RESTAURANTE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visibilidad__c</fullName>
        <label>Visibilidad</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WhiskFrom__c</fullName>
        <label>WhiskFrom</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WhiskTo__c</fullName>
        <label>WhiskTo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WhiskValue__c</fullName>
        <label>WhiskValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>minPlatoFrom__c</fullName>
        <label>minPlatoFrom</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>minPlatoTo__c</fullName>
        <label>minPlatoTo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>minPlatoValue__c</fullName>
        <label>minPlatoValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>LAT_MX_SegmentacionRatios</label>
    <listViews>
        <fullName>HEB</fullName>
        <columns>NAME</columns>
        <columns>Promo__c</columns>
        <columns>BrandSelec__c</columns>
        <columns>CubaFrom__c</columns>
        <columns>CubaTo__c</columns>
        <columns>CubaValue__c</columns>
        <columns>ChampFrom__c</columns>
        <columns>ChampTo__c</columns>
        <columns>Champ_Value__c</columns>
        <columns>NotaFrom__c</columns>
        <columns>NotaTo__c</columns>
        <columns>Calificacion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Values__c</field>
            <operation>equals</operation>
            <value>HEB</value>
        </filters>
        <label>HEB</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LEB</fullName>
        <columns>NAME</columns>
        <columns>BrandSelec__c</columns>
        <columns>Promo__c</columns>
        <columns>CalidadBateo__c</columns>
        <columns>CalidadBateoValue__c</columns>
        <columns>CubaFrom__c</columns>
        <columns>CubaTo__c</columns>
        <columns>CubaValue__c</columns>
        <columns>NotaFrom__c</columns>
        <columns>NotaTo__c</columns>
        <columns>Calificacion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Values__c</field>
            <operation>equals</operation>
            <value>LEB</value>
        </filters>
        <label>LEB</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NIGHT_CLUB</fullName>
        <columns>NAME</columns>
        <columns>DjInter__c</columns>
        <columns>BacardiFrom__c</columns>
        <columns>BacardiTo__c</columns>
        <columns>BacardiValue__c</columns>
        <columns>ResAcceso__c</columns>
        <columns>Visibilidad__c</columns>
        <columns>NotaFrom__c</columns>
        <columns>NotaTo__c</columns>
        <columns>Calificacion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Values__c</field>
            <operation>equals</operation>
            <value>NIGHT CLUB</value>
        </filters>
        <label>NIGHT_CLUB</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RESTAURANTES</fullName>
        <columns>NAME</columns>
        <columns>Somelier__c</columns>
        <columns>minPlatoFrom__c</columns>
        <columns>minPlatoTo__c</columns>
        <columns>minPlatoValue__c</columns>
        <columns>BrandSelec__c</columns>
        <columns>WhiskFrom__c</columns>
        <columns>WhiskTo__c</columns>
        <columns>WhiskValue__c</columns>
        <columns>NotaFrom__c</columns>
        <columns>NotaTo__c</columns>
        <columns>Calificacion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Values__c</field>
            <operation>equals</operation>
            <value>RESTAURANTE</value>
        </filters>
        <label>RESTAURANTES</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>LAT_MX_SegmentacionRatios Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LAT_MX_SegmentacionRatios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>